[package]
name = "mona_auto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ron = "0.10.1"

image = "0.25"
imageproc = "0.25"
win-screenshot = "4.0.13"
rfd = "0.15.3"

# gui
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
eframe = "0.31.0"

# internationalization
i18n-embed = { version = "0.15.4", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.9.4"
rust-embed = "8.7.2"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"]}

# discord
reqwest = { version = "0.12", features = ["blocking", "multipart"] }

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
